# copro

./: .gitignore  Cargo.toml  README.md
crates/coox-cli/: Cargo.toml
crates/coox-cli/src/: lib.rs  main.rs
crates/coox-cli/src/agent/: config.rs  events.rs  mod.rs  runtime.rs
crates/coox-cli/src/command/: app_command.rs  builtins.rs  input.rs  mod.rs  slash.rs
crates/coox-cli/src/tui/: app.rs  mod.rs  state.rs  terminal.rs
crates/coox-cli/src/tui/components/: blocks.rs  command_menu.rs  conversation.rs  mod.rs  notifications.rs  pending_inputs.rs  status.rs
crates/coox-config/: Cargo.toml
crates/coox-config/src/: lib.rs
crates/coox-harness/: Cargo.toml
crates/coox-harness/src/: request.rs
crates/coox-harness/src/skills/: mod.rs  store.rs
crates/coox-harness/src/tools/: context.rs  mod.rs  tool.rs
crates/coox-harness/tests/: request.rs  skills.rs  tools.rs
crates/coox-provider-openai/: Cargo.toml
crates/coox-provider-openai/src/: config.rs  error.rs  request.rs  stream.rs
crates/coox-tui/: Cargo.toml
crates/coox-tui/src/: clipboard.rs  lib.rs  selection.rs  text.rs
crates/coox-tui/src/components/: fold.rs  image.rs  input.rs  markdown.rs  mod.rs  scroll_view.rs
crates/coox-workspace/: Cargo.toml
crates/coox-workspace/src/: lib.rs  router.rs
crates/coox-workspace/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  read.rs  vfs_walk.rs  write.rs
crates/coox-workspace/tests/: bash.rs  edit.rs  glob.rs  grep.rs  ls.rs  read.rs  router.rs  write.rs
crates/copro-agent/: ARCHITECTURE.md  Cargo.toml  MIGRATION_PLAN.md
crates/copro-agent/src/: agent.rs  cancel.rs  context.rs  event.rs  history.rs  hook.rs  lib.rs  run.rs  runtime.rs  tools.rs  turn.rs
crates/copro-agent/src/run/: checkpoint.rs  control.rs  execution.rs  handle.rs  mod.rs  types.rs
crates/copro-agent/src/turn/: checkpoint.rs  config.rs  control.rs  execution.rs  handle.rs  machine.rs  mod.rs  resources.rs  start.rs  stream_item.rs  types.rs
crates/copro-agent/tests/: agent.rs  runtime.rs
crates/copro-api/: Cargo.toml
crates/copro-api/src/: message.rs  stream.rs  tool.rs
crates/copro-config/: Cargo.toml
crates/copro-config/src/: lib.rs
crates/copro-core/: Cargo.toml
crates/copro-core/src/: error.rs  lib.rs  message.rs  model.rs  provider.rs  request.rs  response.rs  stream.rs  tool.rs  types.rs
crates/copro-derive/: Cargo.toml
crates/copro-derive/src/: lib.rs
crates/copro-derive/tests/: hosted_tool.rs  provider_factory.rs
crates/copro-harness/: Cargo.toml
crates/copro-harness/src/: lib.rs  tools.rs
crates/copro-harness/src/skills/: format.rs  hook.rs  mod.rs  request.rs  runtime.rs  tool.rs  types.rs
crates/copro-harness/src/tools/: context.rs  function.rs  mod.rs  output.rs  router.rs  tool.rs
crates/copro-harness/tests/: request.rs  skills.rs  tools.rs
crates/copro-provider-openai/: Cargo.toml
crates/copro-provider-openai/src/: capabilities.rs  config.rs  error.rs  lib.rs  provider.rs  request.rs  stream.rs
crates/copro-tools/: Cargo.toml
crates/copro-tools/src/: lib.rs
crates/copro-workspace/: Cargo.toml
crates/copro-workspace/src/: lib.rs  router.rs
crates/copro-workspace/src/tools/: edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  read.rs  utils.rs  vfs_walk.rs  write.rs
crates/copro-workspace/tests/: edit.rs  glob.rs  grep.rs  ls.rs  read.rs  router.rs  write.rs
examples/grep-progress-tui/: Cargo.toml
examples/grep-progress-tui/src/: main.rs
examples/openai-simple-chat/: Cargo.toml
examples/openai-simple-chat/src/: main.rs
examples/simple-cli/: Cargo.toml
examples/simple-cli/skills/accurate-calculation/: SKILL.md
examples/simple-cli/skills/current-time/: SKILL.md
examples/simple-cli/src/: main.rs  router.rs  skills.rs  tools.rs
