[workspace]
members = [
  "crates/copro-agent",
  "crates/copro-config",
  "crates/copro-api",
  "crates/copro-derive",
  "crates/copro-provider-openai",
  "crates/copro-harness",
  "crates/copro-workspace",
  "examples/*",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
copro-agent = { path = "crates/copro-agent" }
copro-config = { path = "crates/copro-config" }
copro-api = { path = "crates/copro-api" }
copro-derive = { path = "crates/copro-derive" }
copro-provider-openai = { path = "crates/copro-provider-openai" }
copro-harness = { path = "crates/copro-harness" }
copro-workspace = { path = "crates/copro-workspace" }

async-openai = { version = "0.40.2", default-features = false, features = [
  "byot",
  "responses",
  "rustls",
] }
async-std = "1"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
config = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
grep = "0.4.1"
ignore = "0.4"
proc-macro2 = "1"
quote = "1"
schemars = "1.2.1"
similar = "3"
syn = { version = "2", features = ["derive", "parsing", "printing"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
vfs = { version = "0.13", features = ["async-vfs"] }
