[package]
name = "coox-provider-openai"
version.workspace = true
edition.workspace = true

[dependencies]
copro-api.workspace = true
copro-derive.workspace = true
async-openai.workspace = true
async-stream.workspace = true
base64.workspace = true
futures-util.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
