[package]
name = "coox-workspace"
version.workspace = true
edition.workspace = true

[dependencies]
async-std.workspace = true
copro-agent.workspace = true
copro-api.workspace = true
coox-harness.workspace = true
futures-util.workspace = true
grep.workspace = true
ignore.workspace = true
libc.workspace = true
schemars.workspace = true
serde.workspace = true
similar.workspace = true
tokio = { workspace = true, features = ["io-util", "process"] }
vfs.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt", "time"] }
