[package]
name = "copro-agent"
version.workspace = true
edition.workspace = true

[dependencies]
copro-core.workspace = true
async-stream.workspace = true
futures-util.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
