[package]
name = "copro-agent"
version.workspace = true
edition.workspace = true

[dependencies]
copro-api.workspace = true
async-stream.workspace = true
derive_more.workspace = true
futures-util.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
