[package]
name = "copro-api"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
