[package]
name = "copro-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
copro-api.workspace = true
futures-util.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
