[package]
name = "copro-workspace"
version.workspace = true
edition.workspace = true

[dependencies]
async-std.workspace = true
copro-agent.workspace = true
copro-api.workspace = true
copro-harness.workspace = true
futures-util.workspace = true
grep.workspace = true
ignore.workspace = true
schemars.workspace = true
serde.workspace = true
similar.workspace = true
vfs.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
