[package]
name = "grep-progress-tui"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
copro-agent.workspace = true
copro-api.workspace = true
coox-harness.workspace = true
coox-workspace.workspace = true
crossterm = "0.29"
futures-util.workspace = true
ratatui = "0.30"
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
vfs.workspace = true
