[package]
name = "simple-cli"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
copro-agent.workspace = true
copro-api.workspace = true
copro-provider-openai.workspace = true
copro-harness.workspace = true
futures-util.workspace = true
serde.workspace = true
schemars.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
