[package]
name = "simple-cli"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
copro-agent.workspace = true
copro-api.workspace = true
coox-provider-openai.workspace = true
coox-harness.workspace = true
coox-workspace.workspace = true
vfs.workspace = true
futures-util.workspace = true
serde.workspace = true
schemars.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
